fix order items
